[workspace]
resolver = "2"
members = [
  "app_state",
  "common_routes",
  "config_lib",
  "constants",
  "to_err_string",
  "enum_extension_lib/enum_extension",
  "enum_extension_lib",
  "location_lib",
  "from_str",
  "git_info",
  "git_sync_cmd",
  "pg_crud",
  "pg_crud/pg_crud_common",
  "pg_crud/pg_crud_common_and_macros_common",
  "pg_crud/pg_crud_macros_common",
  "pg_crud/pg_json_object_type",
  "pg_crud/pg_json_object_type/gen_pg_json_object_type",
  "pg_crud/pg_json_object_type/gen_pg_json_object_type_source",
  "pg_crud/pg_json_object_type/gen_pg_json_object_type_test",
  "pg_crud/pg_json_object_type/gen_pg_json_object_type_test_content",
  "pg_crud/pg_json_object_type/pg_json_object_type_common",
  "pg_crud/pg_json_types",
  "pg_crud/pg_json_types/gen_pg_json_types",
  "pg_crud/pg_json_types/gen_pg_json_types_common",
  "pg_crud/pg_json_types/gen_pg_json_types_source",
  "pg_crud/pg_json_types/gen_pg_json_types_test",
  "pg_crud/pg_json_types/gen_pg_json_types_test_content",
  "pg_crud/pg_table",
  "pg_crud/pg_table/gen_pg_table",
  "pg_crud/pg_table/gen_pg_table_source",
  "pg_crud/pg_table/gen_pg_table_test",
  "pg_crud/pg_table/gen_pg_table_test_content",
  "pg_crud/pg_types",
  "pg_crud/pg_types/gen_pg_types",
  "pg_crud/pg_types/gen_pg_types_source",
  "pg_crud/pg_types/gen_pg_types_test",
  "pg_crud/pg_types/gen_pg_types_test_content",
  "pg_crud/pg_types/pg_types_common",
  "pg_crud/where_filters",
  "pg_crud/where_filters/gen_where_filters",
  "gen_quotes",
  "macros_helpers",
  "macros_helpers/gen_struct_or_enum_derive_ts_builder",
  "server",
  "server_app_state",
  "server_config",
  "server_table_example",
  "server_types",
  "telegram_bot",
  "config_lib/gen_getter_traits_for_struct_fields",
  "config_lib/try_from_env",
  "config_lib/server_port",
  "config_lib/server_port/server_port_try_from_u16",
  "config_lib/server_port/server_port_common",
  "http_logic",
  "route_validators",
  "tests",
  "impl_display_as_debug",
  "macro_clippy_check_common",
  "location_test",
  "file_system",
  "token_patterns",
  "naming",
  "naming/naming_common",
  "naming/naming_macros",
  "panic_location",
  "providers",
  "optml",
]
exclude = []

[workspace.dependencies]
serde = {version = "=1.0.228", features = ["derive"]}
serde_derive = {version = "=1.0.228"}
serde_json = {version = "=1.0.148"}
toml = {version = "=0.9.8"}
scraper = {version = "=0.25.0"}
regex = {version = "=1.12.2"}
convert_case = {version = "=0.10.0"}
uuid = {version = "=1.19.0", features = ["serde", "v4"]}
reqwest = {version = "=0.13.1", default-features = false, features = ["json", "blocking", "cookies", "gzip", "brotli", "deflate", "native-tls", "multipart", "stream", "http2"]}
tokio = {version = "=1.48.0", features = ["macros", "rt-multi-thread"]}
sqlx = {version = "=0.8.6", features = ["postgres", "uuid", "bigdecimal", "rust_decimal", "chrono", "time", "bit-vec", "runtime-tokio", "ipnetwork", "mac_address", "json"]}
axum = {version = "=0.8.8", features = ["macros"]}
tower-http = {version = "=0.6.8", features = ["trace", "fs", "cors"]}
http-body = {version = "=1.0.1"}
http = {version = "=1.4.0"}
futures = {version = "=0.3.31"}
tracing = {version = "=0.1.44", features = ["log", "valuable"]}
tracing-subscriber = {version = "=0.3.22", features = ["registry", "env-filter"]}
log = {version = "=0.4.29"}
teloxide = {version = "=0.17.0", features = ["macros"]}
num_cpus = {version = "=1.17.0"}
secrecy = {version = "=0.10.3", features = ["serde"]}
chrono = {version = "=0.4.42", features = ["serde"]}
thiserror = {version = "=2.0.17"}
strum = {version = "=0.27.2"}
strum_macros = {version = "=0.27.2"}
dotenv = {version = "=0.15.0"}
time = {version = "=0.3.44", features = ["serde"]}
quote = {version = "=1.0.42"}
syn = {version = "=2.0.112", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = {version = "=1.0.104"}
utoipa = {version = "=4.1.0", features = ["axum_extras"]} #=5.4.0 contains path bug, update later
schemars = {version = "=1.2.0"}
rayon = {version = "=1.11.0"}
bytes = {version = "=1.11.0"}
walkdir = {version = "=2.5.0"}
itertools = {version = "=0.14.0"}

[workspace.lints.rust]
unsafe_code = "deny"
absolute_paths_not_starting_with_crate = "deny"
deprecated_in_future = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
ffi_unwind_calls = "deny"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "allow" #GenPostgresJsonObjectType cannot simply know impl or not for Select for fields
missing_debug_implementations = "deny"
missing_docs = "allow" #too lazy to write docs now and i think this is not necessary now
non_ascii_idents = "deny"
rust_2021_incompatible_closure_captures = "deny"
rust_2021_incompatible_or_patterns = "deny"
rust_2021_prefixes_incompatible_syntax = "deny"
rust_2021_prelude_collisions = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unnameable_types = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
unstable_features = "deny"
unused_crate_dependencies = "warn" 
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
dead_code = "warn" 
variant_size_differences = "deny"
ambiguous_glob_imports = "deny"
ambiguous_glob_reexports = "deny"
anonymous_parameters = "deny"
array_into_iter = "deny"
asm_sub_register = "deny"
async_fn_in_trait = "deny"
bad_asm_style = "deny"
bare_trait_objects = "deny"
break_with_label_and_loop = "deny"
clashing_extern_declarations = "deny"
coherence_leak_check = "deny"
confusable_idents = "deny"
const_evaluatable_unchecked = "deny"
const_item_mutation = "deny"
deprecated = "deny"
deprecated_where_clause_location = "deny"
deref_into_dyn_supertrait = "deny"
deref_nullptr = "deny"
dropping_copy_types = "deny"
dropping_references = "deny"
drop_bounds = "deny"
duplicate_macro_attributes = "deny"
dyn_drop = "deny"
elided_lifetimes_in_associated_constant = "deny"
ellipsis_inclusive_range_patterns = "deny"
exported_private_dependencies = "deny"
forbidden_lint_groups = "deny"
forgetting_copy_types = "deny"
forgetting_references = "deny"
for_loops_over_fallibles = "deny"
function_item_references = "deny"
hidden_glob_reexports = "deny"
improper_ctypes = "deny"
improper_ctypes_definitions = "deny"
incomplete_features = "deny"
inline_no_sanitize = "deny"
internal_features = "deny"
invalid_doc_attributes = "deny"
invalid_from_utf8 = "deny"
invalid_macro_export_arguments = "deny"
invalid_nan_comparisons = "deny"
invalid_value = "deny"
irrefutable_let_patterns = "deny"
large_assignments = "deny"
late_bound_lifetime_arguments = "deny"
legacy_derive_helpers = "deny"
map_unit_fn = "deny"
mixed_script_confusables = "deny"
named_arguments_used_positionally = "deny"
non_camel_case_types = "deny"
non_fmt_panics = "deny"
non_shorthand_field_patterns = "deny"
non_snake_case = "deny"
non_upper_case_globals = "deny"
noop_method_call = "deny"
no_mangle_generic_items = "deny"
opaque_hidden_inferred_bound = "deny"
overlapping_range_endpoints = "deny"
path_statements = "deny"
private_bounds = "deny"
private_interfaces = "deny"
redundant_semicolons = "deny"
renamed_and_removed_lints = "deny"
semicolon_in_expressions_from_macros = "deny"
special_module_name = "deny"
stable_features = "deny"
suspicious_double_ref_op = "deny"
dangling_pointers_from_temporaries = "deny"
trivial_bounds = "deny"
type_alias_bounds = "deny"
tyvar_behind_raw_pointer = "deny"
uncommon_codepoints = "deny"
unconditional_recursion = "deny"
unexpected_cfgs = "deny"
ungated_async_fn_track_caller = "deny"
uninhabited_static = "deny"
unknown_lints = "deny"
unnameable_test_items = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
unstable_name_collisions = "deny"
unstable_syntax_pre_expansion = "deny"
unused_allocation = "deny"
unused_assignments = "deny"
unused_associated_type_bounds = "deny"
unused_attributes = "deny"
unused_braces = "deny"
unused_comparisons = "deny"
unused_doc_comments = "deny"
unused_features = "deny"
unused_imports = "deny"
unused_labels = "deny"
unused_macros = "deny"
unused_must_use = "deny"
unused_mut = "deny"
unused_parens = "deny"
unused_unsafe = "deny"
unused_variables = "warn" 
useless_ptr_null_checks = "deny"
warnings = "warn" 
while_true = "deny"
ambiguous_associated_items = "deny"
arithmetic_overflow = "deny"
bindings_with_variant_name = "deny"
conflicting_repr_hints = "deny"
enum_intrinsics_non_enums = "deny"
ill_formed_attribute_input = "deny"
incomplete_include = "deny"
ineffective_unstable_trait_impl = "deny"
invalid_atomic_ordering = "deny"
invalid_from_utf8_unchecked = "deny"
invalid_reference_casting = "deny"
invalid_type_param_default = "deny"
integer_to_ptr_transmutes = "deny"
let_underscore_lock = "deny"
long_running_const_eval = "deny"
macro_expanded_macro_exports_accessed_by_absolute_paths = "deny"
mutable_transmutes = "deny"
named_asm_labels = "deny"
no_mangle_const_items = "deny"
overflowing_literals = "deny"
patterns_in_fns_without_body = "deny"
proc_macro_derive_resolution_fallback = "deny"
pub_use_of_private_extern_crate = "deny"
soft_unstable = "deny"
text_direction_codepoint_in_comment = "deny"
text_direction_codepoint_in_literal = "deny"
unconditional_panic = "deny"
undropped_manually_drops = "deny"
unknown_crate_types = "deny"
useless_deprecated = "deny"
redundant_lifetimes = "deny"
unit_bindings = "deny"
non_contiguous_range_endpoints = "deny"
non_local_definitions = "deny"
refining_impl_trait_internal = "deny"
refining_impl_trait_reachable = "deny"
static_mut_refs = "deny"
unpredictable_function_pointer_comparisons = "deny"
double_negations = "deny"
ambiguous_negative_literals = "deny"
closure_returning_async_block = "deny"
deprecated_safe_2024 = "deny"
edition_2024_expr_fragment_specifier = "deny"
if_let_rescope = "deny"
impl_trait_overcaptures = "deny"
impl_trait_redundant_captures = "deny"
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
linker_messages = "deny"
missing_unsafe_on_extern = "deny"
redundant_imports = "deny"
rust_2024_guarded_string_incompatible_syntax = "deny"
rust_2024_incompatible_pat = "deny"
rust_2024_prelude_collisions = "deny"
tail_expr_drop_order = "deny"
unsafe_attr_outside_unsafe = "deny"
ambiguous_wide_pointer_comparisons = "deny"
boxed_slice_into_iter = "deny"
const_item_interior_mutations = "deny"
dangling_pointers_from_locals = "deny"
function_casts_as_integer = "deny"
malformed_diagnostic_attributes = "deny"
malformed_diagnostic_format_literals = "deny"
mismatched_lifetime_syntaxes = "deny"
misplaced_diagnostic_attributes = "deny"
ptr_to_integer_transmute_in_consts = "deny"
repr_c_enums_larger_than_int = "deny"
rtsan_nonblocking_async = "deny"
self_constructor_from_outer_item = "deny"
uncovered_param_in_projection = "deny"
unfulfilled_lint_expectations = "deny"
unknown_diagnostic_attributes = "deny"
unnecessary_transmutes = "deny"
unsupported_calling_conventions = "deny"
uses_power_alignment = "deny"
varargs_without_pattern = "deny"
binary_asm_labels = "deny"
dangerous_implicit_autorefs = "deny"
dependency_on_unit_never_type_fallback = "deny"
explicit_builtin_cfgs_in_flags = "deny"
invalid_null_arguments = "deny"
never_type_fallback_flowing_into_unsafe = "deny"
out_of_scope_macro_calls = "deny"
repr_transparent_non_zst_fields = "deny"
unused_visibilities = "deny"
aarch64_softfloat_neon = "deny"
inline_always_mismatching_target_features = "deny" 
improper_gpu_kernel_arg = "deny"
missing_gpu_kernel_export_name = "deny"
ambiguous_panic_imports = "deny"
ambiguous_glob_imported_traits = "deny"
ambiguous_import_visibilities = "deny"
ambiguous_derive_helpers = "deny"
internal_eq_trait_method_impls = "deny"

[workspace.lints.clippy]
absolute_paths = "deny"
absurd_extreme_comparisons = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "allow" #serde used too much allow_attributes.
allow_attributes_without_reason = "allow" #serde used too much allow_attributes.
almost_complete_range = "deny"
almost_swapped = "deny"
approx_constant = "deny"
arc_with_non_send_sync = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
as_ptr_cast_mut = "deny"
as_underscore = "deny"
assertions_on_constants = "deny"
assertions_on_result_states = "deny"
assign_op_pattern = "deny"
assigning_clones = "deny"
async_yields_async = "deny"
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
bad_bit_mask = "deny"
big_endian_bytes = "deny"
bind_instead_of_map = "deny"
blanket_clippy_restriction_lints = "deny"
blocks_in_conditions = "deny"
bool_assert_comparison = "deny"
bool_comparison = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
borrow_deref_ref = "deny"
borrow_interior_mutable_const = "deny"
borrowed_box = "deny"
box_collection = "deny"
box_default = "deny"
boxed_local = "deny"
branches_sharing_code = "deny"
builtin_type_shadow = "deny"
bytes_count_to_len = "deny"
bytes_nth = "deny"
cargo_common_metadata = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_constructor = "deny"
cast_enum_truncation = "deny"
cast_lossless = "deny"
cast_nan_to_int = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
cast_slice_different_sizes = "deny"
cast_slice_from_raw_parts = "deny"
char_lit_as_u8 = "deny"
chars_last_cmp = "deny"
chars_next_cmp = "deny"
checked_conversions = "deny"
clear_with_drain = "deny"
clone_on_copy = "allow" #allow coz in proc macroses unknown which syn::Field type implements clone+copy.
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
cmp_null = "deny"
cmp_owned = "deny"
cognitive_complexity = "allow" #breaks some code
collapsible_else_if = "deny"
collapsible_if = "deny"
collapsible_match = "deny"
collapsible_str_replace = "deny"
collection_is_never_read = "deny"
comparison_chain = "deny"
comparison_to_empty = "deny"
const_is_empty = "deny"
copy_iterator = "deny"
crate_in_macro_def = "deny"
create_dir = "deny"
crosspointer_transmute = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
decimal_literal_representation = "allow"#dont think its more readable
declare_interior_mutable_const = "deny"
default_constructed_unit_structs = "deny"
default_instead_of_iter_empty = "deny"
default_numeric_fallback = "deny"
default_trait_access = "deny"
default_union_representation = "deny"
deprecated_cfg_attr = "deny"
deprecated_clippy_cfg_attr = "deny"
deprecated_semver = "deny"
deref_addrof = "deny"
deref_by_slicing = "deny"
derivable_impls = "deny"
derive_ord_xor_partial_ord = "deny"
derive_partial_eq_without_eq = "allow"#todo deny after macro refactoring
derived_hash_with_manual_eq = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_names = "deny"
disallowed_script_idents = "deny"
disallowed_types = "deny"
diverging_sub_expression = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
double_comparisons = "deny"
double_must_use = "deny"
double_parens = "deny"
drain_collect = "deny"
drop_non_drop = "deny"
duplicate_mod = "deny"
duplicate_underscore_argument = "deny"
duplicated_attributes = "deny"
duration_subsec = "deny"
eager_transmute = "deny"
else_if_without_else = "deny"
empty_docs = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_line_after_doc_comments = "deny"
empty_line_after_outer_attr = "deny"
empty_loop = "deny"
empty_structs_with_brackets = "deny"
enum_clike_unportable_variant = "deny"
enum_glob_use = "deny"
enum_variant_names = "deny"
eq_op = "deny"
equatable_if_let = "deny"
erasing_op = "deny"
err_expect = "deny"
error_impl_error = "deny"
excessive_nesting = "deny"
excessive_precision = "deny"
exhaustive_enums = "allow" #not need if all binaries would recompile for each version
exhaustive_structs = "allow" #not need if all binaries would recompile for each version
exit = "deny"
expect_fun_call = "deny"
expect_used = "allow" #todo if there is a lot of time then deny
expl_impl_clone_on_copy = "deny"
explicit_auto_deref = "deny"
explicit_counter_loop = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
explicit_write = "deny"
extend_with_drain = "deny"
extra_unused_lifetimes = "deny"
extra_unused_type_parameters = "deny"
fallible_impl_from = "deny"
field_reassign_with_default = "deny"
filetype_is_file = "deny"
filter_map_bool_then = "deny"
filter_map_identity = "deny"
filter_map_next = "deny"
filter_next = "deny"
flat_map_identity = "deny"
flat_map_option = "deny"
float_arithmetic = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
fn_params_excessive_bools = "deny"
fn_to_numeric_cast = "deny"
fn_to_numeric_cast_any = "deny"
fn_to_numeric_cast_with_truncation = "deny"
for_kv_map = "deny"
forget_non_drop = "deny"
format_collect = "deny"
format_in_format_args = "deny"
format_push_string = "deny"
four_forward_slashes = "deny"
from_iter_instead_of_collect = "deny"
from_over_into = "deny"
from_raw_with_void_ptr = "deny"
from_str_radix_10 = "deny"
future_not_send = "deny"
get_first = "deny"
get_last_with_len = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
identity_op = "deny"
if_let_mutex = "deny"
if_not_else = "deny"
if_same_then_else = "deny"
if_then_some_else_none = "deny"
ifs_same_cond = "deny"
ignored_unit_patterns = "deny"
impl_hash_borrow_with_str_and_bytes = "deny"
impl_trait_in_params = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
implicit_return = "allow" #not need
implicit_saturating_add = "deny"
implicit_saturating_sub = "deny"
implied_bounds_in_impls = "deny"
impossible_comparisons = "deny"
imprecise_flops = "deny"
incompatible_msrv = "deny"
inconsistent_digit_grouping = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
ineffective_bit_mask = "deny"
ineffective_open_options = "deny"
inefficient_to_string = "deny"
infallible_destructuring_match = "deny"
infinite_iter = "deny"
inherent_to_string = "deny"
inherent_to_string_shadow_display = "deny"
init_numbered_fields = "deny"
inline_always = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
inline_fn_without_body = "deny"
inspect_for_each = "deny"
int_plus_one = "deny"
integer_division = "deny"
into_iter_on_ref = "deny"
into_iter_without_iter = "deny"
invalid_regex = "deny"
invalid_upcast_comparisons = "deny"
invisible_characters = "deny"
is_digit_ascii_radix = "deny"
items_after_statements = "deny"
items_after_test_module = "deny"
iter_cloned_collect = "deny"
iter_count = "deny"
iter_kv_map = "deny"
iter_next_loop = "deny"
iter_next_slice = "deny"
iter_not_returning_iterator = "deny"
iter_nth = "deny"
iter_nth_zero = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_out_of_bounds = "deny"
iter_over_hash_type = "deny"
iter_overeager_cloned = "deny"
iter_skip_next = "deny"
iter_skip_zero = "deny"
iter_with_drain = "deny"
iter_without_into_iter = "deny"
iterator_step_by_zero = "deny"
join_absolute_paths = "deny"
just_underscores_and_digits = "deny"
large_const_arrays = "deny"
large_digit_groups = "deny"
large_enum_variant = "deny"
large_futures = "deny"
large_include_file = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"
len_without_is_empty = "deny"
len_zero = "deny"
let_and_return = "deny"
let_underscore_future = "deny"
let_underscore_lock = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
let_unit_value = "deny"
let_with_type_underscore = "deny"
lines_filter_map_ok = "deny"
linkedlist = "deny"
little_endian_bytes = "deny"
lossy_float_literal = "deny"
macro_use_imports = "deny"
main_recursion = "deny"
manual_assert = "deny"
manual_async_fn = "deny"
manual_bits = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_filter_map = "deny"
manual_find = "deny"
manual_find_map = "deny"
manual_flatten = "deny"
manual_hash_one = "deny"
manual_instant_elapsed = "deny"
manual_is_ascii_check = "deny"
manual_is_finite = "deny"
manual_is_infinite = "deny"
manual_let_else = "deny"
manual_main_separator_str = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_next_back = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_range_patterns = "deny"
manual_rem_euclid = "deny"
manual_retain = "deny"
manual_saturating_arithmetic = "deny"
manual_slice_size_calculation = "deny"
manual_split_once = "deny"
manual_str_repeat = "deny"
manual_string_new = "deny"
manual_strip = "deny"
manual_swap = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
manual_while_let_some = "deny"
many_single_char_names = "deny"
map_clone = "deny"
map_collect_result_unit = "deny"
map_entry = "deny"
map_err_ignore = "deny"
map_flatten = "deny"
map_identity = "deny"
map_unwrap_or = "deny"
match_as_ref = "deny"
match_bool = "deny"
match_like_matches_macro = "deny"
match_overlapping_arm = "deny"
match_ref_pats = "deny"
match_result_ok = "deny"
match_same_arms = "deny"
match_single_binding = "deny"
match_str_case_mismatch = "deny"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "deny"
maybe_infinite_iter = "deny"
mem_forget = "deny"
mem_replace_option_with_none = "deny"
mem_replace_with_default = "deny"
mem_replace_with_uninit = "deny"
min_ident_chars = "allow" #enable for llm context window optimization
min_max = "deny"
mismatching_type_param_order = "deny"
misnamed_getters = "deny"
misrefactored_assign_op = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_const_for_fn = "deny"
missing_docs_in_private_items = "allow" #too lazy to do it on dev stage
missing_enforced_import_renames = "deny"
missing_errors_doc = "allow" #too lazy to do it on dev stage
missing_fields_in_debug = "deny"
missing_inline_in_public_items = "allow" #its not so clear where to add #[inline] and where not
missing_panics_doc = "allow" #too lazy to do it on dev stage
missing_safety_doc = "deny"
missing_spin_loop = "deny"
missing_trait_methods = "allow" #serde and other crates do not implement this feature. too much time to refactor that
mistyped_literal_suffixes = "deny"
mixed_case_hex_literals = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
module_inception = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "deny"
modulo_one = "deny"
multi_assignments = "deny"
multiple_crate_versions = "allow" #dont know how to fix it
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
must_use_candidate = "deny"
must_use_unit = "deny"
mut_from_ref = "deny"
mut_mut = "deny"
mut_mutex_lock = "deny"
mut_range_bound = "deny"
mutable_key_type = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
naive_bytecount = "deny"
needless_arbitrary_self_type = "deny"
needless_bitwise_bool = "deny"
needless_bool = "deny"
needless_bool_assign = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_borrows_for_generic_args = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_doctest_main = "deny"
needless_else = "deny"
needless_for_each = "deny"
needless_late_init = "deny"
needless_lifetimes = "deny"
needless_match = "deny"
needless_option_as_deref = "deny"
needless_option_take = "deny"
needless_parens_on_range_literals = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
needless_pub_self = "deny"
needless_question_mark = "deny"
needless_range_loop = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
needless_return = "deny"
needless_return_with_question_mark = "deny"
needless_splitn = "deny"
needless_update = "deny"
neg_cmp_op_on_partial_ord = "deny"
neg_multiply = "deny"
negative_feature_names = "deny"
never_loop = "deny"
new_ret_no_self = "deny"
new_without_default = "deny"
no_effect = "deny"
no_effect_replace = "deny"
no_effect_underscore_binding = "deny"
no_mangle_with_rust_abi = "deny"
non_ascii_literal = "deny"
non_canonical_clone_impl = "deny"
non_canonical_partial_ord_impl = "deny"
non_minimal_cfg = "deny"
non_octal_unix_permissions = "deny"
non_send_fields_in_send_ty = "deny"
nonminimal_bool = "deny"
nonsensical_open_options = "deny"
nonstandard_macro_braces = "deny"
not_unsafe_ptr_arg_deref = "deny"
obfuscated_if_else = "deny"
octal_escapes = "deny"
ok_expect = "deny"
only_used_in_recursion = "deny"
op_ref = "deny"
option_as_ref_deref = "deny"
option_env_unwrap = "deny"
option_filter_map = "deny"
option_if_let_else = "deny"
option_map_or_none = "deny"
option_map_unit_fn = "deny"
option_option = "deny"
or_fun_call = "deny"
or_then_unwrap = "deny"
out_of_bounds_indexing = "deny"
panicking_overflow_checks = "deny"
overly_complex_bool_expr = "deny"
panic = "allow"
panic_in_result_fn = "deny"
panicking_unwrap = "deny"
partial_pub_fields = "deny"
partialeq_ne_impl = "deny"
partialeq_to_none = "deny"
path_buf_push_overwrite = "deny"
path_ends_with_ext = "deny"
pattern_type_mismatch = "allow" #dont know how to refactor that. forces to use ref pattern or (.clone with conflict with other lints)
permissions_set_readonly_false = "deny"
possible_missing_comma = "deny"
precedence = "deny"
print_in_format_impl = "deny"
print_literal = "deny"
print_stderr = "allow" #need for dev
print_stdout = "allow" #need for dev
print_with_newline = "deny"
println_empty_string = "deny"
ptr_arg = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
ptr_eq = "deny"
ptr_offset_with_cast = "deny"
pub_use = "allow" #its limitation, not a rule. annoying but not so usefull
pub_with_shorthand = "allow" #conflicts with pub_without_shorthand
pub_without_shorthand = "deny"
question_mark = "deny"
question_mark_used = "allow" #not against it
range_minus_one = "deny"
range_plus_one = "deny"
range_zip_with_len = "deny"
rc_buffer = "deny"
rc_clone_in_vec_init = "deny"
rc_mutex = "deny"
read_line_without_trim = "deny"
read_zero_byte_vec = "deny"
readonly_write_lock = "deny"
recursive_format_impl = "deny"
redundant_allocation = "deny"
redundant_as_str = "deny"
redundant_async_block = "deny"
redundant_at_rest_pattern = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_call = "deny"
redundant_closure_for_method_calls = "deny"
redundant_comparisons = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
redundant_field_names = "deny"
redundant_guards = "deny"
redundant_locals = "deny"
redundant_pattern = "deny"
redundant_pattern_matching = "deny"
redundant_pub_crate = "allow" #dont understand how to use correctly. conflicts with "unreachable pub"
redundant_slicing = "deny"
redundant_static_lifetimes = "deny"
redundant_type_annotations = "deny"
ref_binding_to_reference = "deny"
ref_option_ref = "deny"
ref_patterns = "deny"
repeat_once = "deny"
reserve_after_initialization = "deny"
rest_pat_in_fully_bound_structs = "deny"
result_large_err = "allow" #not sure how to fix it
result_map_or_into_option = "deny"
result_map_unit_fn = "deny"
result_unit_err = "deny"
return_self_not_must_use = "deny"
reversed_empty_ranges = "deny"
same_functions_in_if_condition = "deny"
same_item_push = "deny"
same_name_method = "deny"
search_is_some = "deny"
seek_from_current = "deny"
seek_to_start_instead_of_rewind = "deny"
self_assignment = "deny"
self_named_constructors = "deny"
self_named_module_files = "allow" #old rust style guide. conflicts with mod_module_files (which is Rust 2018+ style guide)
semicolon_if_nothing_returned = "deny"
semicolon_inside_block = "deny"
semicolon_outside_block = "deny"
separated_literal_suffix = "deny"
serde_api_misuse = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
short_circuit_statement = "deny"
should_implement_trait = "deny"
should_panic_without_expect = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
similar_names = "allow" # not so usefull. too much to refactor.
single_call_fn = "deny" # utoipa function code gen problems with that lint
single_char_add_str = "deny"
single_char_lifetime_names = "deny"
single_char_pattern = "deny"
single_component_path_imports = "deny"
single_element_loop = "deny"
single_match = "deny"
single_match_else = "deny"
single_range_in_vec_init = "deny"
size_of_in_element_count = "deny"
size_of_ref = "deny"
skip_while_next = "deny"
slow_vector_initialization = "deny"
stable_sort_primitive = "deny"
std_instead_of_alloc = "allow" #not using no_std
std_instead_of_core = "allow" #not using no_std
str_to_string = "deny"
string_add = "deny"
string_add_assign = "deny"
string_extend_chars = "deny"
string_from_utf8_as_bytes = "deny"
string_lit_as_bytes = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
strlen_on_c_strings = "deny"
struct_excessive_bools = "deny"
struct_field_names = "allow" #just makes no sense. very annoying if u generating similar fields
suboptimal_flops = "deny"
suspicious_arithmetic_impl = "deny"
suspicious_assignment_formatting = "deny"
suspicious_command_arg_space = "deny"
suspicious_doc_comments = "deny"
suspicious_else_formatting = "deny"
suspicious_map = "deny"
suspicious_op_assign_impl = "deny"
suspicious_operation_groupings = "deny"
suspicious_splitn = "deny"
suspicious_to_owned = "deny"
suspicious_unary_op_formatting = "deny"
suspicious_xor_used_as_pow = "deny"
swap_ptr_to_ref = "deny"
tabs_in_doc_comments = "deny"
temporary_assignment = "deny"
tests_outside_test_module = "deny"
to_digit_is_some = "deny"
to_string_in_format_args = "deny"
todo = "deny"
too_many_arguments = "allow" #useless
too_many_lines = "allow" #useless
toplevel_ref_arg = "deny"
trailing_empty_array = "deny"
trait_duplication_in_bounds = "deny"
transmute_bytes_to_str = "deny"
transmute_int_to_bool = "deny"
transmute_int_to_non_zero = "deny"
transmute_null_to_fn = "deny"
transmute_ptr_to_ptr = "deny"
transmute_ptr_to_ref = "deny"
transmute_undefined_repr = "deny"
transmutes_expressible_as_ptr_casts = "deny"
transmuting_null = "deny"
trim_split_whitespace = "deny"
trivial_regex = "deny"
trivially_copy_pass_by_ref = "deny"
try_err = "deny"
tuple_array_conversions = "deny"
type_complexity = "allow" #annoying for code generation
type_id_on_box = "deny"
type_repetition_in_bounds = "deny"
undocumented_unsafe_blocks = "deny"
unicode_not_nfc = "deny"
unimplemented = "deny"
uninit_assumed_init = "deny"
uninit_vec = "deny"
uninlined_format_args = "deny"
unit_arg = "deny"
unit_cmp = "deny"
unit_hash = "deny"
unit_return_expecting_ord = "deny"
unnecessary_box_returns = "deny"
unnecessary_cast = "deny"
unnecessary_fallible_conversions = "deny"
unnecessary_filter_map = "deny"
unnecessary_find_map = "deny"
unnecessary_fold = "deny"
unnecessary_join = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_literal_unwrap = "deny"
unnecessary_map_on_constructor = "deny"
unnecessary_mut_passed = "deny"
unnecessary_operation = "deny"
unnecessary_owned_empty_strings = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unnecessary_sort_by = "deny"
unnecessary_struct_initialization = "deny"
unnecessary_to_owned = "deny"
unnecessary_unwrap = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unneeded_wildcard_pattern = "deny"
unnested_or_patterns = "deny"
unreachable = "deny"
unreadable_literal = "deny"
unsafe_derive_deserialize = "deny"
unsafe_removed_from_name = "deny"
unseparated_literal_suffix = "allow"#separated_literal_suffix deny, unseparated_literal_suffix allow
unsound_collection_transmute = "deny"
unused_async = "deny"
unused_enumerate_index = "deny"
unused_format_specs = "deny"
unused_io_amount = "deny"
unused_peekable = "deny"
unused_rounding = "deny"
unused_self = "deny"
unused_unit = "deny"
unusual_byte_groupings = "deny"
unwrap_in_result = "deny"
unwrap_or_default = "deny"
unwrap_used = "deny"
upper_case_acronyms = "deny"
use_debug = "allow" #too much code to refactor, maybe for size of binary and longer compile times
use_self = "deny"
used_underscore_binding = "deny"
useless_asref = "deny"
useless_attribute = "deny"
useless_conversion = "deny"
useless_format = "deny"
useless_let_if_seq = "deny"
useless_transmute = "deny"
useless_vec = "deny"
vec_box = "deny"
vec_init_then_push = "deny"
vec_resize_to_zero = "deny"
verbose_bit_mask = "deny"
verbose_file_reads = "deny"
waker_clone_wake = "deny"
while_immutable_condition = "deny"
while_let_loop = "deny"
while_let_on_iterator = "deny"
wildcard_dependencies = "deny"
wildcard_enum_match_arm = "deny"
wildcard_imports = "deny"
wildcard_in_or_patterns = "deny"
write_literal = "deny"
write_with_newline = "deny"
writeln_empty_string = "deny"
wrong_self_convention = "deny"
wrong_transmute = "deny"
zero_divided_by_zero = "deny"
zero_prefixed_literal = "deny"
zero_ptr = "deny"
zero_sized_map_values = "deny"
zst_offset = "deny"
infinite_loop = "deny"# didnt wasted for for order declaration(a,b,c...)
integer_division_remainder_used = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
legacy_numeric_constants = "deny"
lint_groups_priority = "deny"
manual_c_str_literals = "deny"
manual_is_variant_and = "deny"
manual_unwrap_or_default = "deny"
missing_transmute_annotations = "deny"
mixed_attributes_style = "deny"
multiple_bound_locations = "deny"
option_as_ref_cloned = "deny"
pub_underscore_fields = "deny"
ref_as_ptr = "deny"
repeat_vec_with_capacity = "deny"
result_filter_map = "deny"
str_split_at_newline = "deny"
suspicious_open_options = "deny"
test_attr_in_doctest = "deny"
missing_const_for_thread_local = "deny"
to_string_trait_impl = "deny"
unconditional_recursion = "deny"
uninhabited_references = "deny"
unnecessary_clippy_cfg = "deny"
unnecessary_get_then_check = "deny"
unnecessary_result_map_or_else = "deny"
zero_repeat_side_effects = "deny"
doc_lazy_continuation = "deny"
macro_metavars_in_unsafe = "deny"
manual_pattern_char_comparison = "deny"
needless_character_iteration = "deny"
needless_maybe_sized = "deny"
renamed_function_params = "deny"
while_float = "deny"
arbitrary_source_item_ordering = "deny"
as_pointer_underscore = "deny"
byte_char_slices = "deny"
cfg_not_test = "deny"
char_indices_as_byte_indices = "deny"
cloned_ref_to_slice_refs = "deny"
coerce_container_to_any = "deny"
confusing_method_to_numeric_cast = "deny"
doc_broken_link = "deny"
doc_comment_double_space_linebreaks = "deny"
doc_include_without_cfg = "deny"
doc_link_code = "deny"
doc_nested_refdefs = "deny"
doc_overindented_list_items = "deny"
doc_paragraphs_missing_punctuation = "deny"
doc_suspicious_footnotes = "deny"
double_ended_iterator_last = "deny"
elidable_lifetime_names = "deny"
empty_enums = "deny"
field_scoped_visibility_modifiers = "deny"
ignore_without_reason = "deny"
infallible_try_from = "deny"
inverted_saturating_sub = "deny"
io_other_error = "deny"
ip_constant = "deny"
literal_string_with_formatting_args = "allow"#in proc macros for generating formatting content is not correct
manual_abs_diff = "deny"
manual_contains = "deny"
manual_dangling_ptr = "deny"
manual_div_ceil = "deny"
manual_ignore_case_cmp = "deny"
manual_inspect = "deny"
manual_is_multiple_of = "deny"
manual_is_power_of_two = "deny"
manual_midpoint = "deny"
manual_ok_err = "deny"
manual_option_as_slice = "deny"
manual_repeat_n = "deny"
manual_rotate = "deny"
manual_slice_fill = "deny"
map_all_any_identity = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_replace_option_with_some = "deny"
needless_as_bytes = "deny"
needless_ifs = "deny"
non_std_lazy_statics = "deny"
non_zero_suggestions = "deny"
owned_cow = "deny"
pathbuf_init_then_push = "deny"
pointer_format = "deny"
pointers_in_nomem_asm_block = "deny"
possible_missing_else = "deny"
precedence_bits = "deny"
redundant_iter_cloned = "deny"
redundant_test_prefix = "deny"
ref_option = "deny"
regex_creation_in_loops = "deny"
replace_box = "deny"
repr_packed_without_abi = "deny"
return_and_then = "deny"
self_only_used_in_recursion = "deny"
set_contains_or_insert = "deny"
single_option_map = "deny"
sliced_string_as_bytes = "deny"
swap_with_temporary = "deny"
too_long_first_doc_paragraph = "deny"
unbuffered_bytes = "deny"
unchecked_time_subtraction = "deny"
unnecessary_debug_formatting = "deny"
unnecessary_first_then_check = "deny"
unnecessary_literal_bound = "deny"
unnecessary_map_or = "deny"
unnecessary_min_or_max = "deny"
unnecessary_option_map_or_else = "deny"
unnecessary_semicolon = "deny"
unneeded_struct_pattern = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
used_underscore_items = "deny"
useless_concat = "deny"
useless_nonzero_new_unchecked = "deny"
volatile_composites = "deny"
zombie_processes = "deny"
decimal_bitwise_operands = "deny"
manual_ilog2 = "deny"
ptr_offset_by_literal = "deny"
needless_type_cast = "deny"
same_length_and_capacity = "deny"
duration_suboptimal_units = "deny"
manual_take = "deny"
manual_checked_ops = "deny"
