[package]
name = "app_state"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"


[dependencies]
sqlx.workspace = true
config_lib.workspace = true

[lints]
workspace = true
