[package]
edition = "2024"
name = "client"
version = "0.1.0"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
reqwasm.workspace = true
serde.workspace = true
serde_json.workspace = true
colorsys.workspace = true
# derive_more = "0.99.17"//for children components 
convert_case.workspace = true
gloo.workspace = true # wasm-logger = "0.2.0" (al;ternative to gloo)
js-sys.workspace = true
stylist.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
yew.workspace = true
yew-router.workspace = true
# yew-stdweb = "0.18.0" // web_sys alternative
yewdux.workspace = true
yewdux-functional.workspace = true
common = {path = "../common"}# local dev test without commits version
svg_component = {path = "../svg_component"}

[lints]
workspace = true
