[package]
name = "cmn_routes"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"

[dependencies]
axum.workspace = true
serde.workspace = true
constants = {path = "../constants"}
git_info = {path = "../git_info"}
optml = {path = "../optml"}

[lints]
workspace = true
