[package]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "=0.7.4", features = ["macros"]}
tower = {version = "=0.4.13"}
tower-http = {version = "=0.5.0", features = ["trace", "fs", "cors"]}
bytes = {version = "=1.2.1"}
chrono = {version = "=0.4", features = ["serde"]}
convert_case = {version = "=0.6.0"}
dotenv = {version = "=0.15.0"}
futures = {version = "=0.3.28"}
http = {version = "=0.2.9"}
regex = {version = "=1.9.3"}
config = {version = "=0.13.3"}
rand = {version = "=0.8", features = ["std_rng"]}
num_cpus = {version = "=1.15.0"}
argon2 = {version = "=0.4.0", features = ["std"]}
# mongodb = {version = "=2.0.1"}
reqwest = {version = "=0.11.17", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "trust-dns", "native-tls", "multipart", "stream", "cookies"]}
secrecy = {version = "=0.8", features = ["serde"]}
serde = {version = "=1.0", features = ["derive"]}
serde-aux = {version = "=4.0.0"}
serde-xml-rs = {version = "=0.6.0"}
serde_derive = {version = "=1.0"}
serde_json = {version = "=1.0"}
serde_path_to_error = {version = "=0.1.12"}
serde_with = {version = "=3.1.0"}
serde_urlencoded = {version = "=0.7.1"}
strum = {version = "=0.24.1"}
strum_macros = {version = "=0.24.3"}
thiserror = {version = "=1.0.48"}
tokio = {version = "=1.29.1", features = ["macros", "rt-multi-thread"]}
itertools = {version = "=0.10.1"}
uuid = {version = "=0.8", features = ["v4", "serde"]}
sqlx = {version = "=0.7.3", features = ["postgres", "uuid", "bigdecimal", "rust_decimal", "chrono", "time", "bit-vec", "runtime-tokio", "ipnetwork", "mac_address", "bit-vec", "json"]}
valuable = {version = "=0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
unicode-segmentation = {version = "=1"}
validator = {version = "=0.16.0"}
tracing = {version = "=0.1", features = ["log", "valuable"]}
tracing-subscriber = {version = "=0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = {version = "=0.3"}
tracing-log = {version = "=0.1"}
urlencoding = {version = "=2.1.3"}
utoipa = {version = "=4.1.0", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "=5.0.0", features=["axum"]}
time = {version = "=0.3.23"}#just for the postgresql_crud
http-body = {version = "=1.0.0"}
git_info = {path = "../git_info"}
type_variants_from_reqwest_response = {path = "../type_variants_from_reqwest_response"}
from_str = {path = "../from_str"}
from_sqlx_postgres_error = {path = "../from_sqlx_postgres_error"}
enum_extension = {path = "../enum_extension"}
error_occurence_lib = {path = "../error_occurence_lib"}
generate_getter_traits_for_struct_fields = {path = "../generate_getter_traits_for_struct_fields"}
postgresql_crud = {path = "../postgresql_crud"}
config_lib = {path = "../config_lib"}
app_state = {path = "../app_state"}
naming_constants = {path = "../naming_constants"}
constants = {path = "../constants"}
http_logic = {path = "../http_logic"}

[lints]
workspace = true